# insta_stamp

./: pyproject.toml  requirements.txt
config/: settings.py  urls.py
insta_stamp/: apps.py  urls.py  views.py
users/: admin.py  models.py  serializers.py  urls.py  views.py
